WIP v7 private branch support